# algohub

./: .cspell.json  .gitignore  farm.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.changes/: birthday.md  contest.md  fetch-version.md  fix-acc.md  fix-md-preview.md  fix-signup-birthday.md  main-contest.md  n-progress.md  optimize-editor.md  optimize-problem.md  optimize-ui.md  pre.json  problem-panel.md  refactor-asset.md  refactor-problem-create.md  refactor-problem.md  refactor-submit.md  splash.md  submission.md  upload-max.md
.github/workflows/: covector-version-or-publish.yml
scripts/: release-aur.mjs  version-check.mjs
src/: App.vue  config.ts  main.ts  router.ts
src-tauri/: CHANGELOG.md  Cargo.toml
src-tauri/src/: lib.rs
src/components/: MarkdownEditor.vue  MonacoEditor.vue  ProblemEditor.vue  SplashScreen.vue  UniversalToolBar.vue
src/scripts/: api.ts  store.ts  time.ts  types.ts  utils.ts
src/views/: dashboard.vue  index.vue  login.vue  signup.vue
src/views/account/: [id].vue
src/views/contest/: [id].vue  create.vue
src/views/org/: create.vue
src/views/problem/: [id].vue  create.vue
src/views/problem/edit/: [id].vue
