[package]
name = "algohub"
version = "0.1.1-rc.3"
description = "ACM Algorithm Hub"
repository = "https://github.com/swpu-acm/algohub"
readme = "../README.md"
authors = ["苏向夜 <fu050409@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "algohub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1", features = ["fs"] }
